--- a/default.css
+++ b/default.css
@@ -14,19 +14,19 @@ body {
     height: 2em;
 }
 .red {
-    background-color: red;
+    background-color: rgb(255, 0, 0);
 }
 .blue {
-    background-color: blue;
+    background-color: rgb(62, 0, 245);
 }
 .orange {
-    background-color: orange;
+    background-color: rgb(255, 155, 0);
 }
 .green {
-    background-color: green;
+    background-color: rgb(0, 231, 0);
 }
 .yellow {
-    background-color: yellow;
+    background-color: rgb(247, 255, 0);
 }
 .white {
     background-color: white;
