--- a/default.css
+++ b/default.css
@@ -1,18 +1,32 @@
+html,
+body {
+  width: 100vw;
+  height: 100vh;
+  margin: 0;
+}
 body {
     background-color: black;
     color: white;
 }
+article {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+.cube {
+    margin: 0;
+}
 .cell {
-    width: 0.5em;
-    height: 0.5em;
+    width: 1vw;
+    height: 1vw;
 }
 .u-face {
-    width: 3em;
-    height: 3em;
+    width: 6vw;
+    height: 6vw;
 }
 .f-face {
-    width: 3em;
-    height: 2em;
+    width: 6vw;
+    height: 4vw;
 }
 .red {
     background-color: rgb(255, 0, 0);
