--- a/src/default.css
+++ b/src/default.css
@@ -18,6 +18,18 @@ article {
     -o-perspective: 800;
     -ms-perspective: 800;
 }
+.settings ul {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+}
+.unselectable {
+    -ms-user-select: none;
+    -moz-user-select: none;
+    -khtml-user-select: none;
+    -webkit-user-select: none;
+    user-select: none;
+}
 .cube {
     position: absolute;
     top: 40vh;
