--- a/src/default.css
+++ b/src/default.css
@@ -1,3 +1,7 @@
+:root {
+  --cell-size: 8vw;
+}
+
 html,
 body {
   width: 100vw;
@@ -5,105 +9,107 @@ body {
   margin: 0;
 }
 body {
-    background-color: black;
-    color: white;
+  background-color: black;
+  color: white;
 }
 article {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    perspective: 800;
-    -moz-perspective: 800;
-    -webkit-perspective: 800;
-    -o-perspective: 800;
-    -ms-perspective: 800;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  perspective: 800;
+  -moz-perspective: 800;
+  -webkit-perspective: 800;
+  -o-perspective: 800;
+  -ms-perspective: 800;
 }
 .settings ul {
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
 }
 .unselectable {
-    -ms-user-select: none;
-    -moz-user-select: none;
-    -khtml-user-select: none;
-    -webkit-user-select: none;
-    user-select: none;
+  -ms-user-select: none;
+  -moz-user-select: none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  user-select: none;
 }
 .cube {
-    position: absolute;
-    top: 40vh;
-    margin: 0;
-    transform-style: preserve-3d;
+  position: absolute;
+  top: 40vh;
+  margin: 0;
+  transform-style: preserve-3d;
 }
 .face {
-    position: absolute;
-    width: 18vw;
-    height: 18vw;
+  position: absolute;
+  width: calc(3 * var(--cell-size));
+  height: calc(3 * var(--cell-size));
 }
 .cell {
-    position: absolute;
-    width: 6vw;
-    height: 6vw;
-    border: 0.2vw solid #000000;
-    box-sizing: border-box;
+  position: absolute;
+  width: var(--cell-size);
+  height: var(--cell-size);
+  border: 0.2vw solid #000000;
+  box-sizing: border-box;
 }
 .pif-top-0 {
-    top: 0;
+  top: 0;
 }
 .pif-top-1 {
-    top: 6vw;
+  top: var(--cell-size);
 }
 .pif-top-2 {
-    top: 12vw;
+  top: calc(2 * var(--cell-size));
 }
 .pif-left-0 {
-    left: 0;
+  left: 0;
 }
 .pif-left-1 {
-    left: 6vw;
+  left: var(--cell-size);
 }
 .pif-left-2 {
-    left: 12vw;
+  left: calc(2 * var(--cell-size));
 }
 
 .u-face {
-    transform: translateY(-100%) rotateX(90deg) translateX(-50%);
+  transform: translateY(-100%) rotateX(90deg) translateX(-50%);
 }
 .d-face {
-    transform: rotateX(-90deg) translateX(-50%);
+  transform: rotateX(-90deg) translateX(-50%);
 }
 .b-face {
-    transform: translateY(-50%) rotateY(90deg) translateX(50%) rotateY(90deg) translateX(50%);
+  transform: translateY(-50%) rotateY(90deg) translateX(50%) rotateY(90deg)
+    translateX(50%);
 }
 .r-face {
-    transform: translateY(-50%) rotateY(90deg);
+  transform: translateY(-50%) rotateY(90deg);
 }
 .f-face {
-    transform: translateY(-50%) rotateY(90deg) translateX(-50%) rotateY(-90deg) translateX(-50%);
+  transform: translateY(-50%) rotateY(90deg) translateX(-50%) rotateY(-90deg)
+    translateX(-50%);
 }
 .l-face {
-    transform: translateY(-50%) translateX(-100%) rotateY(-90deg);
+  transform: translateY(-50%) translateX(-100%) rotateY(-90deg);
 }
 
 .red {
-    background-color: rgb(255, 0, 0);
+  background-color: rgb(255, 0, 0);
 }
 .blue {
-    background-color: rgb(62, 0, 245);
+  background-color: rgb(62, 0, 245);
 }
 .orange {
-    background-color: rgb(255, 155, 0);
+  background-color: rgb(255, 155, 0);
 }
 .green {
-    background-color: rgb(0, 231, 0);
+  background-color: rgb(0, 231, 0);
 }
 .yellow {
-    background-color: rgb(247, 255, 0);
+  background-color: rgb(247, 255, 0);
 }
 .white {
-    background-color: white;
+  background-color: white;
 }
 .gray {
-    background-color: gray;
+  background-color: gray;
 }
