refactor: Perspective as a var

--- a/src/default.css
+++ b/src/default.css
@@ -1,5 +1,6 @@
 :root {
   --cell-size: 8vw;
+  --perspective: 800px;
 }
 
 html,
@@ -16,11 +17,11 @@ article {
   display: flex;
   align-items: center;
   flex-direction: column;
-  perspective: 800;
-  -moz-perspective: 800;
-  -webkit-perspective: 800;
-  -o-perspective: 800;
-  -ms-perspective: 800;
+  perspective: var(--perspective);
+  -moz-perspective: var(--perspective);
+  -webkit-perspective: var(--perspective);
+  -o-perspective: var(--perspective);
+  -ms-perspective: var(--perspective);
 }
 .settings ul {
   margin: 0;
