--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
-body {
-  margin: 0;
-}
+/*body {*/
+/*  margin: 0;*/
+/*}*/
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+/*code {*/
+/*  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',*/
+/*    monospace;*/
+/*}*/
